Implement ASGCT/GST checking